c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/pointer_conversions/convert_ulong_to_void_ptr.c
int main(void) {
  unsigned long x = 0;
  void *v = x; // can't implicitly convert a non-pointer type to a pointer
}